# XR1_vrep_ros

./: .~lock.IMU Mocap Readme.odt#  ActuatorControllerReadme  CMakeLists.txt  GrvExciteFullPos-X.data  GrvExciteFullPos-X2.data  Handshake.data  Hello.data  IMU Mocap Readme.odt  IMUstuff.txt  IMUtest.data  JustDance.data  JustFilter.data  Justdoit.data  MetalGear.action  MetalGear.data  MetalGear.sh  MetalGear4.action  MetalGearF4st.action  MetalGearF4st.data  MetalGear_FullAction.action  NotDance.data  OP.sh  README.md  XR1_vrep.sh  Xcercise.action  actual  autobotsrollout.action  autobotsrollout.data  beziertest.data  chopped_data.data  dynExciteFullPos-8.data  dynExciteFullPos-X2.data  fingertest.action  fingertest.data  fullblast.action  fullblast.data  gear_test.txt  idle1.data  idle10.data  idle11.data  (+36 more)
ActuatorController/actuatorController/: AbstractAutoRecognize.cpp  AbstractAutoRecognize.h  EthernetAutoRecognize.cpp  EthernetCommunicateUnit.cpp  EthernetCommunicateUnit.h  EthernetCommunication.cpp  SerialAutoRecognize.cpp  SerialAutoRecognize.h  SerialCommunicateUnit.cpp  SerialCommunication.cpp  actuatorController.pro  actuatorController.pro.user.66a1527  actuatorcontroller.cpp  actuatorcontroller_global.h  actuatordata.cpp  actuatordata.h  actuatordefine.h  communicateunit.cpp  communicateunit.h  communication.cpp  communication.h  dataUtil.cpp  dataUtil.h  idata.cpp  idata.h  innfosproxy.cpp  mediator.cpp  mediator.h  proxyparser.cpp  proxyparser.h
ActuatorController/build-actuatorController-Desktop-Debug/: Makefile  moc_AbstractAutoRecognize.cpp  moc_EthernetAutoRecognize.cpp  moc_EthernetCommunicateUnit.cpp  moc_SerialAutoRecognize.cpp  moc_SerialCommunicateUnit.cpp  moc_actuatordata.cpp  moc_communicateunit.cpp  moc_communication.cpp  moc_innfosproxy.cpp  moc_mediator.cpp  moc_proxyparser.cpp
ActuatorController/build-actuatorController-Desktop_Qt_5_7_1_MSVC2015_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
ActuatorController/build-actuatorController-Desktop_Qt_5_7_1_MSVC2015_64bit-Debug/debug/: moc_EthernetAutoRecognize.cpp  moc_EthernetCommunicateUnit.cpp  moc_mediator.cpp
ActuatorController/build-actuatorController-Desktop_Qt_5_7_1_MSVC2015_64bit-Release/: Makefile  Makefile.Debug  Makefile.Release
ActuatorController/build-actuatorController-Desktop_Qt_5_7_1_MSVC2015_64bit-Release/release/: moc_AbstractAutoRecognize.cpp  moc_SerialAutoRecognize.cpp  moc_SerialCommunicateUnit.cpp  moc_actuatordata.cpp  moc_communicateunit.cpp  moc_communication.cpp  moc_innfosproxy.cpp  moc_proxyparser.cpp
IMU-build/: CMakeCache.txt  Makefile  XR1IMU.cbp  XR1IMUmethods.h  cmake_install.cmake  xr1IMUdefine.h  xr1define.h
V-REP/: AUTO_SAVED_INSTANCE_1.ttt  AUTO_SAVED_INSTANCE_2.ttt  waddup.action
V-REP/models/components/: v_repModelThumbnails.ttmt
V-REP/models/equipment/: v_repModelThumbnails.ttmt
V-REP/models/nature/: v_repModelThumbnails.ttmt
V-REP/models/people/: v_repModelThumbnails.ttmt
V-REP/models/robots/mobile/: v_repModelThumbnails.ttmt
V-REP/models/robots/non-mobile/: v_repModelThumbnails.ttmt
V-REP/models/tools/: v_repModelThumbnails.ttmt
V-REP/models/vehicles/: v_repModelThumbnails.ttmt
V-REP/scenes/: MetalGear.ttt  XR1_Vanilla.ttt
XR1ControllerPM/: Makefile  libXR1ControllerPM.so.1.0.0
bag/: test_2018-03-02-12-11-15.bag
build-xr1Show-Desktop-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h  xr1Show
include/: XR1.h  XR1IMUmethods.h  my_plugin.h  ratio_layouted_frame.h  xr1IMUdefine.h
model/: XR1_Vanilla.ttt  actual_base.dae  skeleton-collision-tuned_remodeled.ttt
scripts/: vrep_test
sdk/include/: AbstractAutoRecognize.h  EthernetAutoRecognize.h  EthernetCommunication.h  SerialAutoRecognize.h  SerialCommunication.h  actuatorcontroller.h  actuatorcontroller_global.h  actuatordata.h  actuatordefine.h  communication.h  dataUtil.h  innfosproxy.h  mediator.h
sdk/lib/windows_x64/debug/: actuatorControllerd.lib
sdk/lib/windows_x64/release/: actuatorController.lib
serialPort_Ethernet2CAN_sdk_v2.0.0/: readme.txt
serialPort_Ethernet2CAN_sdk_v2.0.0/example/: CMakeLists.txt
serialPort_Ethernet2CAN_sdk_v2.0.0/example/src/: homingActuator.cpp  lookupActuators.cpp  monitorActuator.cpp  operateActuator.cpp  tuneActuator.cpp
serialPort_Ethernet2CAN_sdk_v2.0.0/sdk/include/: CSignal.hpp  EthernetAutoRecognize.h  EthernetCommunication.h  SerialAutoRecognize.h  SerialCommunicateUnit.h  SerialCommunication.h  actuatorcontroller.h  actuatordata.h  actuatordefine.h  innfosproxy.h
src/: IMU_example.cpp  XR1.cpp  XR1IMUmethods.cpp  my_plugin.cpp  my_plugin.ui  my_plugin.ui.autosave  my_plugin_record.cpp  my_plugin_torque.cpp  my_plugin_ultis.cpp  ratio_layouted_frame.cpp  ref.ui
srv/: InertiaPara.srv  JointCurrent.srv
xr1Show/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  path.txt  xr1Show.pro  xr1Show.pro.user.a0724e0  xr1define.h
